examples/test/testpolicy19829.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19829
  namespace: namespace252
spec:
  podSelector:
    matchLabels:
      key17: value15
      key43: value46
      key41: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value41
          key47: value48
          key23: value37
      podSelector:
        matchLabels:
          key0: value20
